--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.2.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.27.2",
     "vue-i18n-bridge": "^9.2.0-beta.10",
